modification du html

--- a/danse.html
+++ b/danse.html
@@ -5,5 +5,18 @@
         <title>La danse classique</title>
     </head>
     <body>
-    
+        <header>
+            La danse Classique
+        </header>
+        <img src="assets/chaussons.jpg" alt="image de chaussons de danse"/>
+        <h2 class="questions">
+            Qu'est-ce que la danse classique ?
+        </h2>
+        <article id="texte1">
+           description
+        </article>
+        <h2 class="questions">
+            Qui est Aurélie Dupont ?
+        </h2>
     </body>
+</html>
