creation de la navbar

--- a/danse.html
+++ b/danse.html
@@ -3,11 +3,22 @@
     <head>
         <!--la danse classique c'est genial-->
         <title>La danse classique</title>
+        <link href="danse.css" rel="stylesheet">
     </head>
     <body>
         <header>
-            La danse Classique
+            <nav class="navbar">
+                <ul>
+                    <li><a href="accueil.html">Accueil</a></li>
+                    <li><a href="danse.html">Sport</a></li>
+                    <li><a href="#accueil.html">Avis</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </header>
+        <h1>
+            La Danse Classique
+        </h1>
         <img src="assets/chaussons.jpg" alt="image de chaussons de danse"/>
         <h2 class="questions">
             Qu'est-ce que la danse classique ?
@@ -20,3 +31,4 @@
         </h2>
     </body>
 </html>
+
