--- a/danse.html
+++ b/danse.html
@@ -17,13 +17,13 @@
                             <li class="deroulant">
                                 <a href="index.html/#section-sport">Sport <img  src="https://cdn-icons-png.flaticon.com/512/25/25623.png" alt="fleche"></a>
                                 <ul class="sous-menu">
-                                    <li><a href="index-MMA.html">MMA</a></li>
+                                    <li><a href="MMA.html">MMA</a></li>
                                     <li><a href="danse.html">Danse Classique</a></li>
-                                    <li><a href="skate prototype.html">Skate</a></li>
+                                    <li><a href="#">Skate</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#section-avis">Avis</a></li>
-                            <li><a href="#section-contact">Contact</a></li>
+                            <li><a href="index.html#section-avis">Avis</a></li>
+                            <li><a href="index.html#section-contact">Contact</a></li>
                         </ul>
                     </div>
                     <a class="switch-theme">Changer Thème</a>
@@ -81,7 +81,7 @@
                     <div class="card-content">
                         <h2 class="card-title">MMA</h2>
                         <p class="card-text">Un sport de combat très intéressant.</p>
-                        <a href="index-MMA.html" class="card-button">Découvrir</a>
+                        <a href="MMA.html" class="card-button">Découvrir</a>
                     </div>
                 </div>
         
@@ -91,7 +91,7 @@
                     <div class="card-content">
                         <h2 class="card-title">SKATE</h2>
                         <p class="card-text">Un magnifique sport à regarder et à pratiquer.</p>
-                        <a href="skate prototype.html" class="card-button">Découvrir</a>
+                        <a href="#" class="card-button">Découvrir</a>
                     </div>
                 </div>
             </div>
@@ -118,6 +118,6 @@
                 </div>
             </div>
         </footer>
-        <script src="danse.js"></script>
+        <script src="theme.js"></script>
     </body> 
 </html>
