--- a/MMA.html
+++ b/MMA.html
@@ -17,7 +17,7 @@
                         <ul class="sous-menu">
                             <li><a href="index-MMA.html">MMA</a></li>
                             <li><a href="danse.html">Danse Classique</a></li>
-                            <li><a href="#">Skate</a></li>
+                            <li><a href="Skate.html">Skate</a></li>
                         </ul>
                     </li>
                     <li><a href="index.html#section-avis">Avis</a></li>
