--- a/Skate.html
+++ b/Skate.html
@@ -6,7 +6,7 @@
         <title>Le Skateboard</title>
         <link rel="stylesheet" href="Skate.css">
     </head>
-    <body>
+    <body class ="light">
         <nav class="navBar">
             <div class="nav-links">
                 <ul>
