--- a/danse.html
+++ b/danse.html
@@ -3,7 +3,8 @@
     <head> 
         <!--la danse classique c'est genial--> 
         <meta charset="UTF-8">
-        <meta name="danse" content="site sur la danse classique">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="sport" content="MMA,Danse-Classique,Skate">
         <title>La danse classique</title> 
         <link href="danse.css" rel="stylesheet"> 
         <link rel="icon" type="image" href="assets/fav.png" >
@@ -26,7 +27,7 @@
                             <li><a href="index.html#section-contact">Contact</a></li>
                         </ul>
                     </div>
-                    <a class="switch-theme">Changer Thème</a>
+                    <button class="switch-theme">Changer Thème</button>
                 </nav>
         </header> 
         <h1> La Danse Classique </h1> 
