--- a/danse.html
+++ b/danse.html
@@ -7,7 +7,7 @@
         <meta name="sport" content="MMA,Danse-Classique,Skate">
         <title>La danse classique</title> 
         <link href="danse.css" rel="stylesheet"> 
-        <link rel="icon" type="image" href="assets/fav.png" >
+        <link rel="icon" type="image" href="assets/fav.png" alt="favicon danse">
     </head> 
     <body class="light"> 
         <header> 
