--- a/danse.html
+++ b/danse.html
@@ -88,7 +88,7 @@
         
                 <!-- Carte Skate -->
                 <div class="card">
-                    <img src="assets/skate.jpg" alt="Image skate" class="card-image">
+                    <img src="assets/skate.webp" alt="Image skate" class="card-image">
                     <div class="card-content">
                         <h2 class="card-title">SKATE</h2>
                         <p class="card-text">Un magnifique sport à regarder et à pratiquer.</p>
