--- a/MMA.html
+++ b/MMA.html
@@ -24,14 +24,14 @@
                     <li><a href="index.html#section-contact">Contact</a></li>
                 </ul>
             </div>
-            <a class="switch-theme">Changer Thème</a>
+            <button class="switch-theme">Changer Thème</button>
         </nav>
 
 
         <!-- Acceuil mma-->
         <section class="acceuil">
             <h1>MMA</h1>
-            <img class="img-acceuil" src="assets/mma_background.png" alt="img-mma-background">
+            <img class="img-acceuil" src="assets/mma_background.webp" alt="img-mma-background">
         </section>
 
 
@@ -85,6 +85,7 @@
                     <h3>Les différents arts martiaux</h3>
                     <p>
                         Le MMA repose sur la maîtrise de plusieurs disciplines martiales, chacune apportant des techniques spécifiques aux combattants :
+                    </p>
                         <ul>
                             <li>Le judo, souvent utilisé pour les projections et le contrôle de l'adversaire.</li>
                             <li>la boxe, permet d'exceller dans les frappes rapides et précises.</li>
@@ -92,6 +93,7 @@
                             <li> la lutte, qui se concentre plus sur les takedowns (amené au sol ) et le contrôle physique.</li>
                             <li>le muay-thaï, qui met en avant les coups puissants avec les coudes, les genoux, les jambes et les poings.</li>
                         </ul>
+                    <p>
                         Cette diversité technique fait du MMA un sport exigeant où chaque combattant doit être polyvalent pour s'imposer.
                     </p>
                 </div>
@@ -110,7 +112,7 @@
             <p>Le MMA est dominé par plusieurs grandes organisations qui organisent des événements à l’échelle mondiale.</p>
             <div class="contenu-s4">
                 <div class="comp1">
-                    <img src="assets/ufc2_mma.svg"alt="UFC2">
+                    <img src="assets/ufc2_mma.svg" alt="UFC2">
                     <p>L’UFC (Ultimate Fighting Championship) est la plus connue et regroupe les meilleurs combattants du monde. Ses combats spectaculaires et ses stars emblématiques en font un leader incontesté de la compétition en MMA.</p>
                 </div>
                 <div class="comp2">
@@ -118,7 +120,7 @@
                     <p>Le ONE Championship met en avant la richesse des arts martiaux traditionnels.<br>Basé à Singapour, il est l'événement sportif le plus influent d'Asie et le plus regardé du monde</p>
                 </div>
                 <div class="comp3">
-                    <img src="assets/bellator-mma.png" alt="bellatorMMA">
+                    <img src="assets/bellator-mma.webp" alt="bellatorMMA">
                     <p>Bellator MMA est la deuxième plus grande organisation de MMA aux Etats-Unis, derrière L’UFC et aussi  la ligue sportive qui connaît la croissance la plus rapide au monde.</p>
                 </div>
             </div>
@@ -140,7 +142,7 @@
                 </div>
                 <div class="video">
                     <video controls>
-                        <source src="assets/Conor McGregor's 13-Second KO of Jose Aldo _ UFC 194, 2015 _ On This Day.mp4">
+                        <source src="assets/Conor McGregor's 13-Second KO of Jose Aldo _ UFC 194, 2015 _ On This Day.mp4" alt="connor video">
                     </video>
                 </div>
             </div>
@@ -148,7 +150,7 @@
             <div class="gsp">
                 <div class="video">
                     <video controls>
-                        <source src="assets/George Saint Pierre était impitoyable dans l'octogone.mp4">
+                        <source src="assets/George Saint Pierre était impitoyable dans l'octogone.mp4" alt="gsp video">
                     </video>
                 </div>
                 <div class="gsp-card">
@@ -163,7 +165,7 @@
                 <!--3-->
             <div class="nunes">
                 <div class="nunes-card">
-                    <img src="assets/amanda+nunes.jpg" alt="nunes">
+                    <img src="assets/amanda+nunes.webp" alt="nunes">
                     <h3>Amanda Nunes</h3>
                     <p>Amanda Nunes, surnommée "The Lioness", est une combattante brésilienne<br>
                         Elle est célèbre pour être la première femme de l’UFC à détenir simultanément deux ceintures dans deux catégories de poids<br>
@@ -172,7 +174,7 @@
                 </div>
                 <div class="video">
                     <video controls>
-                        <source src="assets/UFC _ Nunes met Cyborg KO en 50 secondes et devient championne du monde poids plumes (2018).mp4">
+                        <source src="assets/UFC _ Nunes met Cyborg KO en 50 secondes et devient championne du monde poids plumes (2018).mp4" alt="nunes video">
                     </video>
                 </div>
             </div>
@@ -191,17 +193,17 @@
                     <div class="card-content">
                         <h3>Danse classique</h3>
                         <p>Découvrez la grâce et l'élégence de la dans classique.</p>
-                        <button href="danse.html">Découvrir</button>
+                        <a href="danse.html">Découvrir</a>
                     </div>
                 </div>
         
                 <!-- Carte Skate -->
                 <div class="skate">
-                    <img src="assets/skate.jpg" alt="Image skate">
+                    <img src="assets/skate.webp" alt="Image skate">
                     <div class="card-content">
                         <h3>Skate</h3>
                         <p>Un magnifique sport à regarder et à pratiquer.</p>
-                        <button href="Skate.html">Découvrir</button>
+                        <a href="Skate.html">Découvrir</a>
                     </div>
                 </div>
             </div>
