--- a/MMA.html
+++ b/MMA.html
@@ -28,12 +28,16 @@
         </nav>
 
 
+
         <!-- Acceuil mma-->
         <section class="acceuil">
             <h1>MMA</h1>
             <img class="img-acceuil" src="assets/mma_background.webp" alt="img-mma-background">
         </section>
 
+        <!-- Ancrage -->
+
+        <a id="ancrage" href="#">^</a>
 
         <!--section 1-->
 
@@ -61,15 +65,15 @@
                 <div class="contenu-s2">
                     <div class="histoire1">
                         <p>Pendant l’Antiquité, Le Pankration était une discipline olympique qui combinait lutte et pugilat (Combat entre boxeurs gantés de cestes), marquant les premières traces de combats mêlant différents styles.</p>
-                        <img src="assets/Pankration_mma.jpg" alt="Pankration">
+                        <img src="assets/Pankration_mma.webp" alt="Pankration">
                     </div>
                     <div class="histoire2">
                         <p>Le Vale Tudo, qui peut être traduit par “Tout est permis”, émerge au Brésil comme des combats presque sans règles, permettant à divers styles martiaux de s'affronter.</p>
-                        <img src="assets/vale_tudo_mma.jpg" alt="ValeTudo">
+                        <img src="assets/vale_tudo_mma.webp" alt="ValeTudo">
                     </div>
                     <div class="histoire3">
                         <p>En 1993, l’UFC structure le MMA en introduisant des règles pour la sécurité et transforme des affrontements brutaux en un sport professionnel.</p>
-                        <img src="assets/ufc_mma.jpg" alt="UFC1">
+                        <img src="assets/ufc_mma.webp" alt="UFC1">
                     </div>
                 </div>
             </div>
@@ -116,7 +120,7 @@
                     <p>L’UFC (Ultimate Fighting Championship) est la plus connue et regroupe les meilleurs combattants du monde. Ses combats spectaculaires et ses stars emblématiques en font un leader incontesté de la compétition en MMA.</p>
                 </div>
                 <div class="comp2">
-                        <img src="assets/ONE_Championship.png" alt="OneChampionship">
+                        <img src="assets/ONE_Championship.webp" alt="OneChampionship">
                     <p>Le ONE Championship met en avant la richesse des arts martiaux traditionnels.<br>Basé à Singapour, il est l'événement sportif le plus influent d'Asie et le plus regardé du monde</p>
                 </div>
                 <div class="comp3">
@@ -132,7 +136,7 @@
             <div class="connor">
                 <!--1-->
                 <div class="connor-card">
-                    <img src="assets/img_connor_mcgregor.jpg.png" alt="connor">
+                    <img src="assets/img_connor_mcgregor.jpg.webp" alt="connor">
                     <h3>Conor McGregor</h3>
                     <p>Conor McGregor, surnommé "The Notorious", est un combattant irlandais et l’une des plus grandes stars du MMA.<br>
                         Connu pour sa personnalité charismatique et ses talents de showman, il est devenu une icône mondiale grâce à son style de combat explosif et sa capacité à provoquer ses adversaires avec des déclarations mémorables.<br>
@@ -154,7 +158,7 @@
                     </video>
                 </div>
                 <div class="gsp-card">
-                    <img src="assets/gsportrait.JPG" alt="gsp">
+                    <img src="assets/gsportrait.webp" alt="gsp">
                     <h3>Georges St-Pierre</h3>
                     <p>Georges St-Pierre, souvent appelé GSP, est un combattant canadien.<br>
                         Il a dominé la division des poids mi-moyens pendant des années avant de revenir de sa retraite pour remporter le titre des poids moyens.<br>
@@ -225,7 +229,7 @@
                         <a href="https://iut.univ-amu.fr/fr"><img src="assets/iut_logo.webp" alt="IUT Logo"></a>
                     </div>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/iutaixmars/?hl=fr"><img class="social-logo" src="assets/instagram.png" alt="Instagram"></a>
+                        <a href="https://www.instagram.com/iutaixmars/?hl=fr"><img class="social-logo" src="assets/instagram.webp" alt="Instagram"></a>
                         <a href="https://www.youtube.com/channel/UCWDTfF0ved1c_bChVrRjjog"><img class="social-logo" src="assets/youtube.png" alt="YouTube"></a>
                         <a href="https://x.com/iutaixmars"><img class="social-logo" src="assets/X_logo.webp" alt="X"></a>
                     </div>
