--- a/danse.html
+++ b/danse.html
@@ -4,10 +4,10 @@
         <!--la danse classique c'est genial--> 
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="sport" content="MMA,Danse-Classique,Skate">
+        <meta name="description" content="MMA,Danse-Classique,Skate">
         <title>La danse classique</title> 
         <link href="danse.css" rel="stylesheet"> 
-        <link rel="icon" type="image" href="assets/fav.png" alt="favicon danse">
+        <link rel="icon" type="image/x-icon" href="assets/des-sports.webp" alt="favicon">
     </head> 
     <body class="light"> 
         <header> 
@@ -16,7 +16,7 @@
                         <ul>
                             <li><a href="index.html">Accueil</a></li>
                             <li class="deroulant">
-                                <a href="index.html/#section-sport">Sport <img  src="https://cdn-icons-png.flaticon.com/512/25/25623.png" alt="fleche"></a>
+                                <a>Sport <img  src="https://cdn-icons-png.flaticon.com/512/25/25623.png" alt="fleche"></a>
                                 <ul class="sous-menu">
                                     <li><a href="MMA.html">MMA</a></li>
                                     <li><a href="danse.html">Danse Classique</a></li>
@@ -112,7 +112,7 @@
                         <a href="https://iut.univ-amu.fr/fr"><img src="assets/iut_logo.webp" alt="IUT Logo"></a>
                     </div>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/iutaixmars/?hl=fr"><img  src="assets/instagram.png" alt="Instagram"></a>
+                        <a href="https://www.instagram.com/iutaixmars/?hl=fr"><img  src="assets/instagram.webp" alt="Instagram"></a>
                         <a href="https://www.youtube.com/channel/UCWDTfF0ved1c_bChVrRjjog"><img src="assets/youtube.png" alt="YouTube"></a>
                         <a href="https://x.com/iutaixmars"><img  src="assets/X_logo.webp" alt="X"></a>
                     </div>
