--- a/MMA.html
+++ b/MMA.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="sport" content="MMA,Danse-Classique,Skate">
+        <meta name="description" content="MMA,Danse-Classique,Skate">
         <link rel="stylesheet" href="MMA.css" media="all">
+        <link rel="icon" type="image/x-icon" href="assets/des-sports.webp" alt="favicon">
         <title>Acceuil</title>
     </head>
     <body class="light">
@@ -196,7 +197,7 @@
                     <img src="assets/danse.jpg" alt="Image danse classique">
                     <div class="card-content">
                         <h3>Danse classique</h3>
-                        <p>Découvrez la grâce et l'élégence de la dans classique.</p>
+                        <p>Découvrez la grâce et l'élégence de la danse classique.</p>
                         <a href="danse.html">Découvrir</a>
                     </div>
                 </div>
