--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="sport" content="MMA,Danse-Classique,Skate">
+        <meta name="description" content="MMA,Danse-Classique,Skate">
         <link rel="stylesheet" href="style.css" media="all">
+        <link rel="icon" type="image/x-icon" href="assets/des-sports.webp" alt="favicon">
         <title>Acceuil</title>
     </head>
     <body class="light">
