--- a/MMA.html
+++ b/MMA.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="MMA,Danse-Classique,Skate">
         <link rel="stylesheet" href="MMA.css" media="all">
-        <link rel="icon" type="image/x-icon" href="assets/des-sports.webp" alt="favicon">
+        <link rel="icon" type="image/x-icon" href="assets/des-sports.webp">
         <title>Acceuil</title>
     </head>
     <body class="light">
