--- a/danse.html
+++ b/danse.html
@@ -7,7 +7,7 @@
         <meta name="description" content="MMA,Danse-Classique,Skate">
         <title>La danse classique</title> 
         <link href="danse.css" rel="stylesheet"> 
-        <link rel="icon" type="image/x-icon" href="assets/des-sports.webp" alt="favicon">
+        <link rel="icon" type="image/x-icon" href="assets/des-sports.webp">
     </head> 
     <body class="light"> 
         <header> 
