--- a/MMA.html
+++ b/MMA.html
@@ -147,7 +147,7 @@
                 </div>
                 <div class="video">
                     <video controls>
-                        <source src="assets/Conor McGregor's 13-Second KO of Jose Aldo _ UFC 194, 2015 _ On This Day.mp4" alt="connor video">
+                        <source src="assets/conor_video.mp4">
                     </video>
                 </div>
             </div>
@@ -155,7 +155,7 @@
             <div class="gsp">
                 <div class="video">
                     <video controls>
-                        <source src="assets/George Saint Pierre était impitoyable dans l'octogone.mp4" alt="gsp video">
+                        <source src="assets/gsp_video.mp4">
                     </video>
                 </div>
                 <div class="gsp-card">
@@ -179,7 +179,7 @@
                 </div>
                 <div class="video">
                     <video controls>
-                        <source src="assets/UFC _ Nunes met Cyborg KO en 50 secondes et devient championne du monde poids plumes (2018).mp4" alt="nunes video">
+                        <source src="assets/nunes_video.mp4">
                     </video>
                 </div>
             </div>
