--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <a href="https://iut.univ-amu.fr/fr"><img src="assets/iut_logo.webp" alt="IUT Logo"></a>
                     </div>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/iutaixmars/?hl=fr"><img class="social-logo" src="assets/instagram.png" alt="Instagram"></a>
+                        <a href="https://www.instagram.com/iutaixmars/?hl=fr"><img class="social-logo" src="assets/instagram.webp" alt="Instagram"></a>
                         <a href="https://www.youtube.com/channel/UCWDTfF0ved1c_bChVrRjjog"><img class="social-logo" src="assets/youtube.png" alt="YouTube"></a>
                         <a href="https://x.com/iutaixmars"><img class="social-logo" src="assets/X_logo.webp" alt="X"></a>
                     </div>
